[options]
zip_safe = True
python_requires = >=3.6
include_package_data = True
packages = find:

[options.package_data]
myub =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
ignore =
    D100
    D101
    D102
    D103
    D104
    D105
    D106
    D107
    D202
    E203
    W503
exclude =
    __init__.py
    docs

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[pydocstyle]
match_dir = src

[isort]
line_length = 88
indent = 4
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
